--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:+5QnT/9W9m2SOtzPtLV2mgDHbr5DqR2LZmMYqYzAEO8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://54.163.63.158
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -62,3 +62,5 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
+
+WWWGROUP=1000
